linked and github linked

--- a/index.html
+++ b/index.html
@@ -56,7 +56,19 @@
               <h3>Ali Mahmood Buali</h3>
               <p>ID: 202100376</p>
               <p>alibuali3660@gmail.com</p>
-              <p><a>LinkedIn</a> | <a>GitHub</a> | <a>CV</a></p>
+              <p style="color: #1100fc">
+                <a
+                  style="text-decoration: none; color: #1100fc"
+                  href="https://www.linkedin.com/in/ali-buali/"
+                  >LinkedIn</a
+                >
+                |
+                <a
+                  style="text-decoration: none; color: #1100fc"
+                  href="https://github.com/Buali03"
+                  >GitHub</a
+                >
+              </p>
             </div>
             <div class="team-member">
               <div class="avatar">RA</div>
