media query update

--- a/index.html
+++ b/index.html
@@ -685,53 +685,59 @@
             </thead>
             <tbody>
               <tr>
-                <td>H1</td>
-                <td>Computer Self-Efficacy</td>
-                <td>0.196</td>
-                <td>&lt; 0.001</td>
-                <td class="status-supported">SUPPORTED</td>
+                <td data-label="Hypothesis">H1</td>
+                <td data-label="Variable">Computer Self-Efficacy</td>
+                <td data-label="Beta (β)">0.196</td>
+                <td data-label="p-value">&lt; 0.001</td>
+                <td data-label="Result" class="status-supported">SUPPORTED</td>
               </tr>
               <tr>
-                <td>H2</td>
-                <td>Trust</td>
-                <td>0.175</td>
-                <td>&lt; 0.001</td>
-                <td class="status-supported">SUPPORTED</td>
+                <td data-label="Hypothesis">H2</td>
+                <td data-label="Variable">Trust</td>
+                <td data-label="Beta (β)">0.175</td>
+                <td data-label="p-value">&lt; 0.001</td>
+                <td data-label="Result" class="status-supported">SUPPORTED</td>
               </tr>
               <tr>
-                <td>H3</td>
-                <td>Social Influence</td>
-                <td>0.247</td>
-                <td>&lt; 0.001</td>
-                <td class="status-supported">SUPPORTED (Strongest)</td>
+                <td data-label="Hypothesis">H3</td>
+                <td data-label="Variable">Social Influence</td>
+                <td data-label="Beta (β)">0.247</td>
+                <td data-label="p-value">&lt; 0.001</td>
+                <td data-label="Result" class="status-supported">
+                  SUPPORTED (Strongest)
+                </td>
               </tr>
               <tr>
-                <td>H4</td>
-                <td>Perceived Benefit</td>
-                <td>0.157</td>
-                <td>&lt; 0.001</td>
-                <td class="status-supported">SUPPORTED</td>
+                <td data-label="Hypothesis">H4</td>
+                <td data-label="Variable">Perceived Benefit</td>
+                <td data-label="Beta (β)">0.157</td>
+                <td data-label="p-value">&lt; 0.001</td>
+                <td data-label="Result" class="status-supported">SUPPORTED</td>
               </tr>
               <tr>
-                <td>H5</td>
-                <td>Perceived Ease of Use</td>
-                <td>0.186</td>
-                <td>&lt; 0.001</td>
-                <td class="status-supported">SUPPORTED</td>
+                <td data-label="Hypothesis">H5</td>
+                <td data-label="Variable">Perceived Ease of Use</td>
+                <td data-label="Beta (β)">0.186</td>
+                <td data-label="p-value">&lt; 0.001</td>
+                <td data-label="Result" class="status-supported">SUPPORTED</td>
               </tr>
               <tr>
-                <td>H6</td>
-                <td>Digital Payment Concerns</td>
-                <td>-0.016</td>
-                <td>0.124</td>
-                <td class="status-not-supported">NOT SUPPORTED</td>
+                <td data-label="Hypothesis">H6</td>
+                <td data-label="Variable">Digital Payment Concerns</td>
+                <td data-label="Beta (β)">-0.016</td>
+                <td data-label="p-value">0.124</td>
+                <td data-label="Result" class="status-not-supported">
+                  NOT SUPPORTED
+                </td>
               </tr>
               <tr>
-                <td>H7</td>
-                <td>Digital Payment Benefits</td>
-                <td>0.023</td>
-                <td>0.075</td>
-                <td class="status-not-supported">NOT SUPPORTED</td>
+                <td data-label="Hypothesis">H7</td>
+                <td data-label="Variable">Digital Payment Benefits</td>
+                <td data-label="Beta (β)">0.023</td>
+                <td data-label="p-value">0.075</td>
+                <td data-label="Result" class="status-not-supported">
+                  NOT SUPPORTED
+                </td>
               </tr>
             </tbody>
           </table>
