linkedin and github links added

--- a/index.html
+++ b/index.html
@@ -75,12 +75,38 @@
               <h3>Reham Mohammed Alfarhan</h3>
               <p>ID: 202105915</p>
               <p>rm5988391@gmail.com</p>
+              <p style="color: #1100fc">
+                <a
+                  style="text-decoration: none; color: #1100fc"
+                  href="https://www.linkedin.com/in/fatema-alsayyah-97a4b2399"
+                  >LinkedIn</a
+                >
+                |
+                <a
+                  style="text-decoration: none; color: #1100fc"
+                  href="https://github.com/FATIMAALSAYYAH"
+                  >GitHub</a
+                >
+              </p>
             </div>
             <div class="team-member">
               <div class="avatar">FA</div>
               <h3>Fatema Ebrahim Alsayyah</h3>
               <p>ID: 202005105</p>
               <p>fatimaalsayyah3@gmail.com</p>
+              <p style="color: #1100fc">
+                <a
+                  style="text-decoration: none; color: #1100fc"
+                  href="https://www.linkedin.com/in/reham-mohammed-alfarhan-b790322a4/"
+                  >LinkedIn</a
+                >
+                |
+                <a
+                  style="text-decoration: none; color: #1100fc"
+                  href="https://github.com/Reham-Alfarhan"
+                  >GitHub</a
+                >
+              </p>
             </div>
           </div>
         </div>
