media query update

--- a/index.html
+++ b/index.html
@@ -784,49 +784,65 @@
             </thead>
             <tbody>
               <tr>
-                <td>Perceived Ease of Use</td>
-                <td>4.40</td>
-                <td>Very easy to use and learn</td>
+                <td data-label="Variable">Perceived Ease of Use</td>
+                <td data-label="Mean Score">4.40</td>
+                <td data-label="Interpretation">Very easy to use and learn</td>
               </tr>
               <tr>
-                <td>Perceived Benefit</td>
-                <td>4.39</td>
-                <td>Strong agreement on time savings and convenience</td>
+                <td data-label="Variable">Perceived Benefit</td>
+                <td data-label="Mean Score">4.39</td>
+                <td data-label="Interpretation">
+                  Strong agreement on time savings and convenience
+                </td>
               </tr>
               <tr>
-                <td>Behavioral Intention</td>
-                <td>4.39</td>
-                <td>High intention to continue and increase usage</td>
+                <td data-label="Variable">Behavioral Intention</td>
+                <td data-label="Mean Score">4.39</td>
+                <td data-label="Interpretation">
+                  High intention to continue and increase usage
+                </td>
               </tr>
               <tr>
-                <td>Use of Cashless Payments</td>
-                <td>4.27</td>
-                <td>Current usage already very high</td>
+                <td data-label="Variable">Use of Cashless Payments</td>
+                <td data-label="Mean Score">4.27</td>
+                <td data-label="Interpretation">
+                  Current usage already very high
+                </td>
               </tr>
               <tr>
-                <td>Computer Self-Efficacy</td>
-                <td>4.20</td>
-                <td>High confidence in digital skills</td>
+                <td data-label="Variable">Computer Self-Efficacy</td>
+                <td data-label="Mean Score">4.20</td>
+                <td data-label="Interpretation">
+                  High confidence in digital skills
+                </td>
               </tr>
               <tr>
-                <td>Digital Payment Benefits</td>
-                <td>4.14</td>
-                <td>Recognition of speed and safety advantages</td>
+                <td data-label="Variable">Digital Payment Benefits</td>
+                <td data-label="Mean Score">4.14</td>
+                <td data-label="Interpretation">
+                  Recognition of speed and safety advantages
+                </td>
               </tr>
               <tr>
-                <td>Trust</td>
-                <td>4.00</td>
-                <td>Moderate to high trust in systems</td>
+                <td data-label="Variable">Trust</td>
+                <td data-label="Mean Score">4.00</td>
+                <td data-label="Interpretation">
+                  Moderate to high trust in systems
+                </td>
               </tr>
               <tr>
-                <td>Social Influence</td>
-                <td>3.97</td>
-                <td>Moderate influence from social networks</td>
+                <td data-label="Variable">Social Influence</td>
+                <td data-label="Mean Score">3.97</td>
+                <td data-label="Interpretation">
+                  Moderate influence from social networks
+                </td>
               </tr>
               <tr>
-                <td>Digital Payment Concerns</td>
-                <td>3.96</td>
-                <td>Aware of concerns but not deterred</td>
+                <td data-label="Variable">Digital Payment Concerns</td>
+                <td data-label="Mean Score">3.96</td>
+                <td data-label="Interpretation">
+                  Aware of concerns but not deterred
+                </td>
               </tr>
             </tbody>
           </table>
